--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "deploy": "pnpm build && gh-pages -d dist"
   },
+    "homepage": "https://leekhotline.github.io",
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
